syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.analysis";
option java_outer_classname = "AnalysisProto";

package analysis;

service AnalysisService {
  rpc GetWaterQualityAnalysis (WaterQualityAnalysisRequest) returns (WaterQualityAnalysisResponse) {}
  rpc getAirQualityAnalysis (AirQualityAnalysisRequest) returns (AirQualityAnalysisResponse) {}
  rpc SetAnalysisParameters (AnalysisParametersRequest) returns (AnalysisParametersResponse) {}
  rpc StreamAnalysisData (StreamAnalysisDataRequest) returns (stream StreamAnalysisDataResponse) {}
}

message WaterQualityAnalysisRequest {
  string location = 1;
  string start_time = 2;
  string end_time = 3;
  string analysis_type = 4;
}

message AirQualityAnalysisRequest {
  string location = 1;
  string start_time = 2;
  string end_time = 3;
  string analysis_type = 4;
}

message WaterQualityAnalysisResponse {
  repeated AnalysisData water_quality_data = 1;
}

message AirQualityAnalysisResponse {
  repeated AnalysisData air_quality_data = 1;
}

message AnalysisData {
  string location = 1;
  string time = 2;
  string analysis_result = 3;
}

message AnalysisParametersRequest {
  string location = 1;
  string start_time = 2;
  string end_time = 3;
  string analysis_type = 4;
}

message AnalysisDataParams {
  string location = 1;
  string time = 2;
  map<string, double> analysisResult = 3;
}

message AnalysisParametersResponse {
  repeated AnalysisDataParams analysisResult = 1;
}

message StreamAnalysisDataRequest {
  string location = 1;
  int32 duration = 2;
  string analysis_type = 3;
}

message StreamAnalysisDataResponse {
  repeated AnalysisDataParams analysis_result = 1;
}
